# Octillion

./: LICENSE  README.md
octillion/: .env  .gitignore  Cargo.toml  ca-certificate.crt
octillion/scraper/: safeway_scraper.py  save_to_database.py
octillion/src/: main.rs
