[package]
name = "octillion"
version = "0.1.0"
authors = ["Victoria Worthington"]
license = "MIT"
edition = "2021"

[dependencies]
egui = "0.24"
eframe = { version = "0.24", features = ["default"] } # NO extra features here
egui_extras = { version = "0.24", features = ["default", "image"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
futures = "0.3"

[target.'cfg(windows)'.dependencies]  # <--- THIS IS THE KEY PART
winapi = { version = "0.3", features = ["winuser", "windef"] }
